# gumtree-rs

./: Cargo.toml  Makefile  README.md  a  a.py  b  b.py
src/: actions.rs  format.rs  language.rs  languages.rs  lib.rs  line_tree.rs  lis.rs  main.rs  mapping.rs  side_by_side.rs  string_distance.rs  tree.rs  ts_convert.rs
src/matcher/: bottomup.rs  line_diff.rs  mod.rs  topdown.rs
src/output/: json.rs  line_pairing.rs  mod.rs  terminal.rs  text.rs
tests/: diff_e2e.rs  line_pairing.rs  side_by_side.rs  test_actions.rs  test_bottomup.rs  test_format.rs  test_languages.rs  test_line_diff.rs  test_line_tree.rs  test_lis.rs  test_mapping.rs  test_string_distance.rs  test_topdown.rs  test_tree.rs
tests/fixtures/: terminal_v1.txt
