[package]
name = "gumtree-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the SimpleGumTree AST differencing algorithm"

[dependencies]
tree-sitter = "0.26"
tree-sitter-agda = "1.3"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cmake = "0.7"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-containerfile = "0.8"
tree-sitter-dart = "0.2"
tree-sitter-elixir = "0.3"
tree-sitter-embedded-template = "0.25"
tree-sitter-erlang = "0.18"
tree-sitter-go = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-jsdoc = "0.25"
tree-sitter-json = "0.24"
tree-sitter-julia = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-latex = { package = "codebook-tree-sitter-latex", version = "0.6" }
tree-sitter-lua = "0.5"
tree-sitter-make = "1.1"
tree-sitter-md = "0.5"
tree-sitter-nix = "0.3"
tree-sitter-ocaml = "0.25"
tree-sitter-perl = "1.1"
tree-sitter-php = "0.24"
tree-sitter-proto = "0.4"
tree-sitter-python = "0.25"
tree-sitter-r = "1.2"
tree-sitter-regex = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.26"
tree-sitter-sql = { package = "tree-sitter-sequel", version = "0.3" }
tree-sitter-swift = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-verilog = "1.0"
tree-sitter-yaml = "0.7"
tree-sitter-zig = "1.1"

[[bin]]
name = "gumtree-rs"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
